--- a/Cucklist/Views/Manage/Index.cshtml
+++ b/Cucklist/Views/Manage/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h4>@ViewData["Title"]</h4>
-@Html.Partial("_StatusMessage", Model.StatusMessage)
+@Html.Partial("_StatusMessage",Model.StatusMessage)
 <div class="row">
     <div class="col-md-6">
         <form method="post">
@@ -16,17 +16,17 @@
             </div>
             <div class="form-group">
                 <label asp-for="Email"></label>
-                @if (Model.IsEmailConfirmed)
+                @if ( Model.IsEmailConfirmed )
                 {
-                    <div class="input-group">
-                        <input asp-for="Email" class="form-control" />
-                        <span class="input-group-addon" aria-hidden="true"><span class="glyphicon glyphicon-ok text-success"></span></span>
-                    </div>
+                <div class="input-group">
+                    <input asp-for="Email" class="form-control" />
+                    <span class="input-group-addon" aria-hidden="true"><span class="glyphicon glyphicon-ok text-success"></span></span>
+                </div>
                 }
                 else
                 {
-                    <input asp-for="Email" class="form-control" />
-                    <button asp-action="SendVerificationEmail" class="btn btn-link">Send verification email</button>
+                <input asp-for="Email" class="form-control" />
+                <button asp-action="SendVerificationEmail" class="btn btn-link">Send verification email</button>
                 }
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
@@ -34,9 +34,52 @@
                 <label asp-for="PhoneNumber"></label>
                 <input asp-for="PhoneNumber" class="form-control" />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+
+
             </div>
+
+            <div class="form-group">
+
+
+                <h4>Traits</h4>
+                <label asp-for="BiologicalSex"></label>
+                <input asp-for="BiologicalSex" />
+                <label asp-for="Sexuality"></label>
+                <select asp-for="Sexuality" asp-items="@Html.GetEnumSelectList<Sexuality>()">Ethnicity</select>
+                <label asp-for="CuckRole"></label>
+                <select asp-for="CuckRole" asp-items="@Html.GetEnumSelectList<CuckRole>()">Ethnicity</select>
+                <label asp-for="Weight"></label>
+                <input asp-for="Weight" />
+                <label asp-for="Height"></label>
+                <input asp-for="Height" />
+                <label asp-for="Race"></label>
+                <select asp-for="Race" asp-items="@Html.GetEnumSelectList<Race>()">Ethnicity</select>
+                <label asp-for="Ethnicity"></label>
+                <select asp-for="Ethnicity" asp-items="@Html.GetEnumSelectList<Ethnicity>()">Ethnicity</select>
+                <label asp-for="HairColor"></label>
+                <select asp-for="HairColor" asp-items="@Html.GetEnumSelectList<Color>()">Ethnicity</select>
+                <label asp-for="SkinColor"></label>
+                <select asp-for="SkinColor" asp-items="@Html.GetEnumSelectList<Color>()">Ethnicity</select>
+                <label asp-for="EyeColor"></label>
+                <select asp-for="EyeColor" asp-items="@Html.GetEnumSelectList<Color>()">Eye Color</select>
+                <label asp-for="Birthday"></label>
+                <input type="date" asp-for="Birthday" />
+
+
+
+
+
+
+            </div>
+
+
+
             <button type="submit" class="btn btn-default">Save</button>
+
+
         </form>
+
+
     </div>
 </div>
 
