--- a/Cucklist/Views/Manage/Index.cshtml
+++ b/Cucklist/Views/Manage/Index.cshtml
@@ -70,6 +70,9 @@
 
 
 
+
+
+
             </div>
 
 
@@ -79,7 +82,37 @@
 
         </form>
 
+        <h5>Posts</h5>
+        <h6>Images</h6>
+        <form method="post" enctype="multipart/form-data" asp-controller="UploadFiles" asp-action="Index">
+            <div class="form-group">
+                <div class="col-md-10">
+                    <p>Upload one or more files using this form:</p>
+                    <input type="file" name="files" multiple />
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-10">
+                    <input type="submit" value="Upload" />
+                </div>
+            </div>
+        </form>
+        <h6>Stories</h6>
+        <h6>Movies</h6>
 
+        <form method="post" enctype="multipart/form-data" asp-controller="UploadFiles" asp-action="Index">
+            <div class="form-group">
+                <div class="col-md-10">
+                    <p>Upload one or more files using this form:</p>
+                    <input type="file" name="files" multiple />
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-10">
+                    <input type="submit" value="Upload" />
+                </div>
+            </div>
+        </form>
     </div>
 </div>
 
