--- a/Cucklist/Views/Manage/Index.cshtml
+++ b/Cucklist/Views/Manage/Index.cshtml
@@ -67,11 +67,11 @@
             </div>
             <button type="submit" class="btn btn-default">Save</button>
         </form>
+        <form asp-action="Upload" asp-controller="Image" method="post" enctype="multipart/form-data">
+            <input type="file" multiple name="Files" />
+            <input type="submit" value="Submit" />
+        </form>
 
-        <h5>Posts</h5>
-        <h6>Images</h6>
-        <h6>Stories</h6>
-        <h6>Movies</h6>
     </div>
 </div>
 
