--- a/Cucklist/Views/Manage/Index.cshtml
+++ b/Cucklist/Views/Manage/Index.cshtml
@@ -67,7 +67,7 @@
             </div>
             <button type="submit" class="btn btn-default">Save</button>
         </form>
-        <form asp-action="Upload" asp-controller="Image" method="post" enctype="multipart/form-data">
+        <form asp-action="Upload" asp-controller="Upload" method="post" enctype="multipart/form-data">
             <input type="file" multiple name="Files" />
             <input type="submit" value="Submit" />
         </form>
