--- a/Cucklist/Views/Manage/Index.cshtml
+++ b/Cucklist/Views/Manage/Index.cshtml
@@ -71,7 +71,7 @@
             <input type="file" multiple name="Files" />
             <input type="submit" value="Submit" />
         </form>
-
+        <a asp-action="Uploads" asp-controller="Upload">Uploads</a>
     </div>
 </div>
 
