--- a/Cucklist/Views/Manage/Index.cshtml
+++ b/Cucklist/Views/Manage/Index.cshtml
@@ -67,10 +67,14 @@
             </div>
             <button type="submit" class="btn btn-default">Save</button>
         </form>
-        <form asp-action="Upload" asp-controller="Upload" method="post" enctype="multipart/form-data">
-            <input type="file" multiple name="Files" />
+        <form asp-action="UploadFile" asp-controller="Upload" method="post" enctype="multipart/form-data">
+            <input type="file" multiple name="Files" accept="image/*,video/*" />
             <input type="submit" value="Submit" />
         </form>
+        <a asp-action="Uploads" asp-controller="Upload">Uploads</a>
+        <div>@await Html.PartialAsync("_ImageUploadsPartial",ViewData["Images"])</div>
+        <div>@await Html.PartialAsync("_VideoUploadsPartial",ViewData["Videos"])</div>
+
         <a asp-action="Uploads" asp-controller="Upload">Uploads</a>
     </div>
 </div>
