--- a/Cucklist/Views/Shared/_VideoUploadsPartial.cshtml
+++ b/Cucklist/Views/Shared/_VideoUploadsPartial.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="Videos">
-    <h1>Videos</h1>
+    <h1>My Videos</h1>
     @foreach ( Video video in videos )
     {
     <video src="@Url.Content(video.Path)" controls>No Supported Video Player</video>
