--- a/Cucklist/Views/Shared/_ImageUploadsPartial.cshtml
+++ b/Cucklist/Views/Shared/_ImageUploadsPartial.cshtml
@@ -1,10 +1,10 @@
 ﻿
 @{
     var images = (List<Image>) ViewData["Images"]; // Cast the list
- }
+}
 
 <div class="Images">
-    <h1>Images</h1>
+    <h1>My Images</h1>
     @foreach ( Image image in images )
     {
     <img src="@Url.Content(image.Path)" />
