--- a/Cucklist/Views/Upload/Uploads.cshtml
+++ b/Cucklist/Views/Upload/Uploads.cshtml
@@ -4,27 +4,6 @@
 
 }
 
-<h2>Uploads</h2>
-@{
-
-    var images = (List<Image>) ViewData["Images"]; // Cast the list
-    var videos = (List<Video>) ViewData["Videos"];
-    
-}
-
-<div class="Images">
-    <h1>Images</h1>
-    @foreach ( Image image in images )
-    {
-    <img src="@Url.Content(image.Path)" />
-    }
-</div>
-<div class="Videos">
-    <h1> Videos</h1>
-
-    @foreach ( Video video in videos )
-    {
-    <video src="@Url.Content(video.Path)" controls>@video.Name</video>
-    }
-</div>
+@await Html.PartialAsync("_VideoUploadsPartial",ViewData["Videos"])
+@await Html.PartialAsync("_ImageUploadsPartial",ViewData["Images"])
 
