--- a/Cucklist/Views/Manage/Index.cshtml
+++ b/Cucklist/Views/Manage/Index.cshtml
@@ -68,7 +68,7 @@
             <button type="submit" class="btn btn-default">Save</button>
         </form>
         <form asp-action="UploadFile" asp-controller="Upload" method="post" enctype="multipart/form-data">
-            <input type="file" multiple name="Files" accept="image/*,video/*,audio/*" />
+            <input type="file" multiple name="Files" accept=".m4a,image/*,video/*,audio/*" />
             <input type="submit" value="Submit" />
         </form>
         <a asp-action="Uploads" asp-controller="Upload">Uploads</a>
